<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/Prefs_username_default"
        android:key="@string/Prefs_username_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/Prefs_username_summary"
        android:title="@string/Prefs_username_title" />

    <EditTextPreference
        android:defaultValue="@string/Prefs_server_default"
        android:key="@string/Prefs_server_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/Prefs_server_summary"
        android:title="@string/Prefs_server_title" />

    <EditTextPreference
        android:defaultValue="@string/Prefs_channel_default"
        android:key="@string/Prefs_channel_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/Prefs_channel_summary"
        android:title="@string/Prefs_channel_title" />
</PreferenceScreen>